# solscan-api

./: Cargo.toml  README.md  readme.md
.github/workflows/: build.yml  doc.yml  tests.yml
src/: const.rs  lib.rs  solscan.rs
src/enums/: mod.rs  solscan_endpoints.rs  solscan_errors.rs
src/structs/: account_info.rs  block.rs  block_result.rs  block_transaction.rs  chain_info.rs  mod.rs  sol_transfer.rs  spl_transfer.rs  token.rs  token_holder.rs  token_market_item.rs  token_meta.rs  transaction.rs  transaction_last.rs  transaction_list_item.rs  transcation_list_item.rs
src/tests/: mod.rs  test_api_base.rs  test_integration.rs  test_mock_api.rs  test_serde.rs
src/tests/sample_data/: account_tokens.json  account_transactions.json  block_last_20.json  spl_transfer_50.json
src/tests/test_endpoints/: mod.rs  test_account_account.rs  test_account_export_transactions.rs  test_account_sol_transfer.rs  test_account_spl_transfer.rs  test_account_stake_accounts.rs  test_account_tokens.rs  test_account_transactions.rs  test_block_block.rs  test_block_last.rs  test_block_transaction.rs  test_chain_info.rs  test_market_token.rs  test_token_holders.rs  test_token_meta.rs  test_transaction_last.rs  test_transaction_signature.rs
src/tests/test_endpoints/sample_data/: mod.rs  sample_account_account.json  sample_account_account.rs  sample_account_sol_transfer.json  sample_account_sol_transfer.rs  sample_account_spl_transfer.json  sample_account_spl_transfer.rs  sample_account_stake_account.rs  sample_account_tokens.json  sample_account_tokens.rs  sample_account_transactions.json  sample_account_transactions.rs  sample_block_block.json  sample_block_block.rs  sample_block_last.json  sample_block_last.rs  sample_block_transactions.json  sample_block_transactions.rs  sample_chain_info.json  sample_chain_info.rs  sample_market_token.json  sample_market_token.rs  sample_token_holders.json  sample_token_holders.rs  sample_token_meta.json  sample_token_meta.rs  sample_transaction_last.json  sample_transaction_signature.json  sample_transaction_signature.rs
