[package]
name = "solscan-api"
version = "0.1.1"
edition = "2021"
description = "A Wrapper for the Solscan-API for fetching informations about SOL-Accounts and more..."
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/solscan-api"
repository = "https://github.com/DerZwergGimli/solscan-api"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11" }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = { version = "1.0.82" }


[dev-dependencies]
tokio = { version = "1.18.2", features = ["full"] }
httpmock = { version = "0.6" }
json = { version = "0.12.4" }
assert-json-diff = { version = "2.0.2" }


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3